# battle-of-zboriv-simulation

./: .gitignore  RAPORT_PROJEKTU.md  README.md  README_WEB.md  advanced_battle.py  analyze_results.py  app.py  battle_model.py  battle_results.json  extract_numbers_from_pdf.py  extracted_numbers.txt  main.py  prawdziwy-scenariusz.txt  pyproject.toml  requirements.txt  schelling_model.py  summary.md
assets/map/: kafelki_nowe.tsx  map.tmx  nowa_Mapa.tmx  tileset.tsx  tileset_properties.tsx  tileset_tiled_dungeon.tsx  zborow_battlefield.tmx
final-documentation/: ju_cse_report.sty  report.aux  report.blg  report.fdb_latexmk  report.fls  report.ist  report.out  report.tex  report.toc
final-documentation/algorithms/: alg.tex
final-documentation/chapters/: 01-OBJECTIVE.tex  02-INTRODUCTION.tex  03-DATA.tex  04-MODEL.tex  05-IMPLEMENTATION.tex  06-OBSERVATIONS.tex  07-DISCUSSION.tex  CONCLUSIONS.tex
final-documentation/pages/: abstract.tex  bibliography.tex
final-documentation/parameters/: ReportNumber.txt  ReportSubmissionDate.txt  ReportTitle.txt  StudentID.txt  StudentName.txt  course.txt  session.txt  supervisor.txt
markdowns/: API_TESTING.md  BATTLE_END_FIX.md  CHANGES.md  DEAD_UNITS_FIX.md  DEBUG.md  GRAPHICS.md  MAP_RENDERING.md  QUICKSTART.md  SCENARIOS.md  SUMMARY_FIX.md  WEB_INTERFACE.md
simulation/: agent.py  model.py  web_renderer.py
src/models/: Commander.py  Rider.py  SoldierAgent.py  TacticalBattleModel.py  TerrainPatch.py  Warrior.py
templates/: dashboard.html  heatmap.html  index.html
visualization/: sprites.py  window.py
(+5 files in other folders)
