[project]
name = "battle-of-zboriv-simulation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "flask>=3.1.2",
    "flask-cors>=6.0.2",
    "mesa==2.3.2",
    "numpy>=2.2.6",
    "pathfinding>=1.0.18",
    "pillow>=11.3.0",
    "pytmx>=3.32",
]